--- a/src/layout/Navbar/Navbar.scss
+++ b/src/layout/Navbar/Navbar.scss
@@ -39,3 +39,130 @@
 body {
     padding-top: 60px;
 }
+
+
+.navbar {
+    &__data {
+      &__left {
+        button {
+          border: none;
+          background: none;
+          transition: transform 0.3s ease; 
+        }
+        .button--moved {
+          transform: translateX(-120px); 
+        }
+      }
+    }
+  }
+  
+
+  .qrmodal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; 
+  
+    &__content {
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      position: relative;
+      width: 300px;
+      text-align: center;
+      z-index: 10000; 
+    }
+  
+    &__close {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: none;
+      border: none;
+      font-size: 24px;
+      cursor: pointer;
+      z-index: 10001;
+    }
+  
+    &__close-button {
+      margin-top: 20px;
+      padding: 10px 20px;
+      background-color: #007BFF;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+  }
+  
+  .ctmodal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; 
+  
+    &__content {
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      position: relative;
+      width: 300px;
+      text-align: center;
+      z-index: 10000; 
+    }
+  
+    &__close {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: none;
+      border: none;
+      font-size: 24px;
+      cursor: pointer;
+      z-index: 10001;
+    }
+  
+    &__close-button {
+      margin-top: 20px;
+      padding: 10px 20px;
+      background-color: #007BFF;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+  }
+  .ctmodal__body__middle {
+    .input-group {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 1rem;
+  
+      label {
+        margin-bottom: 0.5rem;
+        font-size: 1rem;
+        font-weight: bold;
+      }
+  
+      input, select {
+        padding: 0.5rem;
+        font-size: 1rem;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+      }
+    }
+  }
+  
+  
